# winter-website

./: .dockerignore  .gitignore  Dockerfile  Home.py  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: main.workflow.yml
data/: calibration_1043_sites.csv  calibration_78_sites.csv  gamma_fit_78.geojson
output/optimization/1043_sites/pa_44.75/pe_16.6/: U_trajectory.npy  V_trajectory.npy  X_trajectory.npy  Z_trajectory.npy
output/optimization/1043_sites/pa_44.75/pe_21.6/: U_trajectory.npy  V_trajectory.npy  X_trajectory.npy  Z_trajectory.npy
output/optimization/1043_sites/pa_44.75/pe_26.6/: U_trajectory.npy  V_trajectory.npy  X_trajectory.npy  Z_trajectory.npy
output/optimization/1043_sites/pa_44.75/pe_31.6/: U_trajectory.npy  V_trajectory.npy  X_trajectory.npy  Z_trajectory.npy
output/optimization/1043_sites/pa_44.75/pe_6.6/: U_trajectory.npy  V_trajectory.npy  X_trajectory.npy  Z_trajectory.npy
output/tables/: gamma_percentiles_1043.csv  theta_percentiles_78.csv
pages/: Historical.py  Projections.py
src/data/: gamma_fit_1043.geojson  gamma_reg.geojson  grid_1043_sites.geojson  grid_78_sites.geojson  productivity_params_1043.csv  seriesPriceCattle_prepared.csv
src/utils/: __init__.py  build_calibrations.py  charts.py  config.py  data_loader.py  metrics.py  projections_loader.py  styles.css  ui.py
stan_models/: baseline  baseline.stan
